--- a/package.json
+++ b/package.json
@@ -5,5 +5,11 @@
   "main": "app/main.js",
   "repository": "https://github.com/electron-in-action/clipmaster-9000.git",
   "author": "Steve Kinney <hello@stevekinney.net>",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "menubar": "^5.2.3"
+  },
+  "devDependencies": {
+    "eslint": "^3.19.0"
+  }
 }
