Add build scrips

--- a/package.json
+++ b/package.json
@@ -3,9 +3,16 @@
   "version": "1.0.0",
   "description": "A menubar application with a rich UI.",
   "main": "app/main.js",
+  "scripts": {
+    "start": "electron ."
+  },
   "repository": "https://github.com/electron-in-action/clipmaster-9000.git",
   "author": "Steve Kinney <hello@stevekinney.net>",
   "license": "MIT",
+  "keywords": [
+    "electron",
+    "clipboard"
+  ],
   "dependencies": {
     "menubar": "^5.2.3"
   },
