--- a/.eslintrc
+++ b/.eslintrc
@@ -51,7 +51,7 @@
     "eol-last": 2,
     "eqeqeq": [2, "allow-null"],
     "handle-callback-err": [2, "^(err|error)$" ],
-    "import/no-unresolved": [2, {ignore: ["^electron$"]}],
+    "import/no-unresolved": [2, {"ignore": ["^electron$"]}],
     "indent": [2, 2, { "SwitchCase": 1 }],
     "key-spacing": [2, { "beforeColon": false, "afterColon": true }],
     "keyword-spacing": [2, { "before": true, "after": true }],
