Take some notes

--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "clipboard"
   ],
   "dependencies": {
+    "electron": "^1.6.2",
     "menubar": "^5.2.3"
   },
   "devDependencies": {
-    "eslint": "^3.19.0"
+    "eslint": "^3.19.0",
+    "eslint-plugin-import": "^2.2.0"
   }
 }
