--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   ],
   "dependencies": {
     "electron": "^1.6.2",
-    "menubar": "^5.2.3"
+    "menubar": "^5.2.3",
+    "request": "^2.81.0"
   },
   "devDependencies": {
     "eslint": "^3.19.0",
