--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A menubar application with a rich UI.",
   "main": "app/main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
+    "test": "jest"
   },
   "repository": "https://github.com/electron-in-action/clipmaster-9000.git",
   "author": "Steve Kinney <hello@stevekinney.net>",
@@ -20,6 +21,8 @@
   },
   "devDependencies": {
     "eslint": "^3.19.0",
-    "eslint-plugin-import": "^2.2.0"
+    "eslint-plugin-import": "^2.2.0",
+    "jest": "^20.0.4",
+    "spectron": "^3.7.2"
   }
 }
