--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^3.19.0",
     "eslint-plugin-import": "^2.2.0",
     "jest": "^20.0.4",
+    "sinon": "^3.2.1",
     "spectron": "^3.7.2"
   }
 }
