Pin dependencies, remove lock

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,8 @@ build/Release
 # Dependency directories
 node_modules
 jspm_packages
+yarn.lock
+package-lock.json
 
 # Optional npm cache directory
 .npm
